--- a/assets/css/neon-core.css
+++ b/assets/css/neon-core.css
@@ -2936,7 +2936,7 @@ body {
 .page-container .sidebar-menu {
   display: table-cell;
   vertical-align: top;
-  background: #303641;
+  background: #780139;
   width: 280px;
   position: relative;
   z-index: 100;
@@ -3096,7 +3096,7 @@ body {
   position: relative;
   display: block;
   padding: 10px 20px;
-  color: #aaabae;
+  color: #ffffff;
   z-index: 2;
   -moz-transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
   -o-transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
@@ -3128,7 +3128,7 @@ body {
   top: -1px;
 }
 .page-container .sidebar-menu #main-menu li.active > a {
-  background-color: #2b303a;
+  background-color: #9c004a;
   color: #ffffff;
 }
 .page-container .sidebar-menu #main-menu li.has-sub > a:before {
@@ -3172,11 +3172,11 @@ body {
   border-bottom: 1px solid rgba(69, 74, 84, 0.4);
 }
 .page-container .sidebar-menu #main-menu li ul > li > a {
-  background-color: #2b303a;
+  background-color: #480823;
   padding-left: 40px;
 }
 .page-container .sidebar-menu #main-menu li ul > li > a:hover {
-  background-color: #2d323d;
+  background-color: #63072e;
 }
 .page-container .sidebar-menu #main-menu li ul > li:last-child {
   border-bottom: 0;
@@ -6356,7 +6356,7 @@ textarea.dataTables_wrapper .dataTables_filter > label input {
   padding: 10px 12px;
   border: 1px solid #ebebeb;
   border-top: 0;
-  background: #fafafa;
+  background: #5a0024;
   height: 47px;
 }
 .dataTables_wrapper .dataTables_info:before,
