add services view

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,3 +48,18 @@ body {
    color: gold;
    width: 100%;
 }
+
+
+form.services h3{
+    text-align: center;
+    margin: 40px 0 20px;
+}
+
+form.services h3:first-child{
+    margin-top: 0;
+}
+
+
+form.services .row:nth-child(even){
+    background-color: #eee;
+}
