--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -64,8 +64,46 @@ form.services .row:nth-child(even){
     background-color: #eee;
 }
 
+.print_container{
+    display: none;
+}
+
 @media screen and (min-width: 768px){
     .modal-dialog.modal-sm {
         width: 400px!important;
+    }
+}
+
+@media print{
+
+    @page { 
+        size: auto; 
+        margin: 12mm 8mm 12mm 8mm;  
+    } 
+
+    .page_print{
+        page-break-before: always;
+    }
+
+    .main-content > *, .sidebar-menu{
+        display: none;
+    }
+
+    .print_container{
+        display: block;
+    }
+
+    .main-content{
+        padding: 0;
+    }
+
+    .form-control{
+       padding: 2px 4px;
+       height: 22px;
+    }
+
+    .rating > span{
+      width: 1em;
+      font-size: 1.8em;
     }
 }
