--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -92,7 +92,43 @@ form.services .row:nth-child(even){
 
 .modal .form-horizontal .form-group{
     margin-top: 15px;
-} 
+}
+
+[data-tooltip]{
+    position: relative;
+}
+
+[data-tooltip][disabled]{
+    cursor: not-allowed;
+    background: gray;
+    color: #cecece;
+}
+
+[data-tooltip][disabled]:hover:before{
+    content: attr(data-tooltip);
+    position: absolute;
+    width: 150px;
+    bottom: 32px;
+    left: 50%;
+    margin-left: -75px;
+    color: #fff;
+    text-shadow: 0 0 10px #000;
+    padding: 6px;
+    background: #cecece;
+}
+
+[data-tooltip][disabled]:hover:after{
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    margin-left: -5px;
+    border-top: 10px solid #cecece;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+
 
 @media screen and (min-width: 768px){
     .modal-dialog.modal-sm {
