--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -173,6 +173,25 @@ form.services .row:nth-child(even){
         display: block;
     }
 
+    .print_header{
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .print_header h3{
+        font-size: 16px;
+        margin-bottom: 0;
+    }
+
+   .print_container .print_header p{
+      margin-bottom: 0;
+    }
+
+    .print_container p{
+        margin-bottom: 5px;
+        font-size: 10px;
+    }
+
     .main-content{
         padding: 0;
     }
