only display print container

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -177,6 +177,8 @@ ul.ui-autocomplete{
         display: none;
     }
 
+    .print_aux ~ *{display:none;}
+
     .print_container{
         display: block;
     }
